# audeer

./: .buildinfo  .coveragerc  .coveragerc.Linux  .coveragerc.macOS  .coveragerc.pip  .gitignore  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.rst  api-audeer.html  changelog.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  usage.html
.doctrees/: api-audeer.doctree  changelog.doctree  contributing.doctree  environment.pickle  genindex.doctree  index.doctree  installation.doctree  usage.doctree
.doctrees/api/: audeer.LooseVersion.doctree  audeer.StrictVersion.doctree  audeer.basename_wo_ext.doctree  audeer.common_directory.doctree  audeer.config.doctree  audeer.create_archive.doctree  audeer.deprecated.doctree  audeer.deprecated_default_value.doctree  audeer.deprecated_keyword_argument.doctree  audeer.doctree  audeer.download_url.doctree  audeer.extract_archive.doctree  audeer.extract_archives.doctree  audeer.file_extension.doctree  audeer.flatten_list.doctree  audeer.format_display_message.doctree  audeer.freeze_requirements.doctree  audeer.git_repo_tags.doctree  audeer.git_repo_version.doctree  audeer.install_package.doctree  audeer.is_semantic_version.doctree  audeer.is_uid.doctree  audeer.load_json.doctree  (+20 more)
_modules/: index.html
_sources/: api-audeer.rst.txt  index.rst.txt  usage.rst.txt
api/: audeer.LooseVersion.html  audeer.StrictVersion.html  audeer.basename_wo_ext.html  audeer.common_directory.html  audeer.config.html  audeer.create_archive.html  audeer.deprecated.html  audeer.deprecated_default_value.html  audeer.deprecated_keyword_argument.html  audeer.download_url.html  audeer.extract_archive.html  audeer.extract_archives.html  audeer.file_extension.html  audeer.flatten_list.html  audeer.format_display_message.html  audeer.freeze_requirements.html  audeer.git_repo_tags.html  audeer.git_repo_version.html  audeer.html  audeer.install_package.html  audeer.is_semantic_version.html  audeer.is_uid.html  audeer.list_dir_names.html  audeer.list_file_names.html  audeer.load_json.html  audeer.md5.html  audeer.mkdir.html  audeer.move.html  audeer.move_file.html  audeer.path.html  audeer.progress_bar.html  audeer.replace_file_extension.html  audeer.rmdir.html  audeer.run_tasks.html  audeer.safe_path.html  audeer.save_json.html  audeer.script_dir.html  audeer.sort_versions.html  audeer.suppress_stdout.html  audeer.to_list.html  (+3 more)
audeer/: __init__.py
docs/: api-audeer.rst  conf.py  conftest.py  index.rst  installation.rst  requirements.txt  usage.rst
tests/: conftest.py  requirements.txt  test_install.py  test_io.py  test_io_multithread.py  test_path.py  test_tqdm.py  test_utils.py  test_version.py
(+62 files in other folders)
