[metadata]
name = audeer
author = Hagen Wierstorf, Johannes Wagner
author-email = hwierstorf@audeering.com, jwagner@audeering.com
maintainer = Hagen Wierstorf
maintainer-email = hwierstorf@audeering.com
url = https://github.com/audeering/audeer/
project-urls =
    Documentation = https://audeer.readthedocs.io/
description = Helpful Python functions
long-desciprtion = file: README.rst
license = MIT
license-file = LICENSE
platforms= any
keywords = Python, tools
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Utilities

[options]
packages = find:
install_requires =
    tqdm
setup_requires =
    setuptools_scm

[tool:pytest]
addopts =
    --flake8
    --doctest-plus
    --cov=audeer
    --cov-report term-missing
    --cov-fail-under=90
xfail_strict = true

[flake8]
ignore =
    W503  # math, https://github.com/PyCQA/pycodestyle/issues/513
    __init__.py F401  # ignore unused imports
