[metadata]
name = audeer
author = Hagen Wierstorf, Johannes Wagner
author_email = hwierstorf@audeering.com, jwagner@audeering.com
maintainer = Hagen Wierstorf
maintainer_email = hwierstorf@audeering.com
url = https://github.com/audeering/audeer/
project_urls =
    Documentation = https://audeering.github.io/audeer/
description = Helpful Python functions
long_description = file: README.rst
license = MIT
license_file = LICENSE
platforms= any
keywords = Python, tools
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities

[options]
packages = find:
install_requires =
    tqdm
setup_requires =
    setuptools_scm

[tool:pytest]
addopts =
    --flake8
    --doctest-plus
    --cov=audeer
    --cov-report term-missing
    --cov-report xml
    --cov-fail-under=100
xfail_strict = true

[flake8]
ignore =
    W503  # math, https://github.com/PyCQA/pycodestyle/issues/513
    __init__.py F401  # ignore unused imports
